# shapeguard

./: .gitignore  Pipfile  README.md  mypy.ini  pyproject.toml  setup.py
shapeguard/: __about__.py  __init__.py  dim_specs.py  exception.py  guard.py  parser.py  shape_spec.lark  shape_spec.py  shape_spec_parser.py  tools.py
tests/: test_guard.py  test_match.py
